Corrected margins and spacing in the adventure sections of the front page

--- a/themes/inhabitent/sass/_front-page.scss
+++ b/themes/inhabitent/sass/_front-page.scss
@@ -143,6 +143,7 @@ h6 {
     width: 100%;
     .canoe-text{
       display: block;
+      padding:14px;
       h5{
         margin:0;
         margin-left: 28px;
@@ -164,6 +165,7 @@ h6 {
       font-size: 2rem;
       .beach-text{
         display: block;
+        padding:14px;
       }
     }
     .view {
@@ -172,6 +174,10 @@ h6 {
       height: 186px;
       width:48%;
       font-size:1.563rem;
+      margin-top: 15px;
+      .view-text{
+        padding:14px;
+      }
     }
     .sky {
         background: linear-gradient( to bottom, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.25) 100%), url('../../images/adventure-photos/night-sky.jpg') no-repeat center center;
@@ -179,6 +185,10 @@ h6 {
  height: 186px;
       width:48%;
       font-size:1.563rem;
+         margin-top: 15px;
+         .sky-text{
+           padding:14px;
+         }
 }
 }
 }
